Zurb Foundation 4.3.1 - all included
JS not working

--- a/views/index.erb
+++ b/views/index.erb
@@ -8,7 +8,45 @@
 </head>
 
 <body>
-  <h1>Hellloooo, Nurse!</h1>
+<!-- Navigation -->
+
+  <nav class="top-bar">
+    <ul class="title-area">
+      <!-- Title Area -->
+      <li class="name">
+        <h1>
+          <a href="#">
+            Hellloooo, Nurse!
+          </a>
+        </h1>
+      </li>
+    </ul>
+  </nav>
+
+  <!-- End Top Bar -->
+
+  <div class="row">
+    <div class="large-12 columns">
+    </div>
+  </div>
+
+
+  <footer class="row">
+    <div class="large-12 columns"><hr>
+      <p class="right">A <a href="#">Good Scary</a> Product &bull; &copy; 2013</p>
+    </div>
+  </footer>
+
+  <script>
+  document.write('<script src=js/vendor/' +
+  ('__proto__' in {} ? 'zepto' : 'jquery') +
+  '.js><\/script>')
+  </script>
+  <script src="js/foundation.min.js"></script>
+  <script>
+    $(document).foundation();
+  </script>
+<!-- End Footer -->
 </body>
 
 </html>
