Humans.txt & Robots.txt

--- a/views/index.erb
+++ b/views/index.erb
@@ -3,6 +3,8 @@
 <head>
   <title>Hellloooo, Nurse!</title>
 
+  <link rel="author" href="humans.txt" />
+
   <%= css :application %>
   <%= js :application %>
 </head>
