--- a/views/index.erb
+++ b/views/index.erb
@@ -1,9 +1,22 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
-  <title>Hellloooo, Nurse!</title>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+
+  <title></title>
+  <meta name="description" content="">
 
   <link rel="author" href="humans.txt" />
+
+  <link rel="apple-touch-icon-precomposed" href="/images/favicon-152.png">
+  <meta name="msapplication-TileColor" content="#000000">
+  <meta name="msapplication-TileImage" content="/images/favicon-144.png">
+  <meta name="application-name" content="">
+
+  <!-- <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet"> -->
 
   <%= css :application %>
   <%= js :application %>
