--- a/views/index.erb
+++ b/views/index.erb
@@ -23,6 +23,11 @@
 </head>
 
 <body>
+  <div class="slider vertical" data-slider data-initial-start="25" data-end="200" data-vertical="true">
+  <span class="slider-handle" data-slider-handle role="slider" tabindex="1"></span>
+  <span class="slider-fill" data-slider-fill></span>
+  <input type="hidden">
+</div>
 <!-- Navigation -->
 
   <nav class="top-bar">
