--- a/views/index.erb
+++ b/views/index.erb
@@ -22,12 +22,7 @@
   <%= js :application %>
 </head>
 
-<body>
-  <div class="slider vertical" data-slider data-initial-start="25" data-end="200" data-vertical="true">
-  <span class="slider-handle" data-slider-handle role="slider" tabindex="1"></span>
-  <span class="slider-fill" data-slider-fill></span>
-  <input type="hidden">
-</div>
+
 <!-- Navigation -->
 
   <nav class="top-bar">
@@ -36,7 +31,7 @@
       <li class="name">
         <h1>
           <a href="#">
-            Hellloooo, Nurse!
+            Hellloooo, foundation!
           </a>
         </h1>
       </li>
