--- a/views/index.erb
+++ b/views/index.erb
@@ -78,7 +78,10 @@
   ('__proto__' in {} ? 'zepto' : 'jquery') +
   '.js><\/script>')
   </script>
+  <script src="js/vendor/jquery.js"></script>
+  <script src="js/foundation/foundation.js"></script>
   <script src="js/foundation.min.js"></script>
+  <script src="js/foundation/foundation.orbit.js"></script>
   <script>
     $(document).foundation();
   </script>
